--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,3 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\conta\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+file.reference.jackson-all-1.9.0.jar=C:\\Users\\Nafees Abdullah\\Desktop\\jar\\jackson-all-1.9.0.jar
+user.properties.file=C:\\Users\\Nafees Abdullah\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
